Fixed navbar on mobile

--- a/css/utilities.css
+++ b/css/utilities.css
@@ -109,7 +109,7 @@ a.button:hover {
 /* Small devices (portrait tablets and large phones, 800px and below) */
 @media only screen and (max-width: 800px) {
   .navbar {
-    padding: 20px 20px;
+    padding: 5px 5px;
     background-color: #333
   }
 }
